# Spinor

./: .#WORKFLOW.md  .gitignore  CLAUDE.md  GEMINI.md  HANDOFF.md  HANDOVER-WSL2.md  HANDOVER_RESTART_20260223.md  HANDOVER_STEP26.md  HANDOVER_STEP35.md  MANUAL.md  Main.hs  README.md  README.org  SESSION_HANDOFF_20260226_ARCHITECT.md  SESSION_HANDOFF_20260226_ENGINEER.md  SESSION_HANDOFF_Engineer.md  Syntax.hs  TASKS.md  TODO.md  TODO_new.md  WORKFLOW.md  WORKFLOW2.md  build-os.sh  cabal.project  cabal.project.local  fib-aot.spin  project.md  runtime.c  spinor.cabal  test-tco.spin  test-wasm.spin
.claude/: settings.json  settings.local.json
.claude/commands/: generate-tasks.md  update-manual-sitemap.md
.claude/skills/: generate-tasks.md  update-manual-sitemap.md
.github/workflows/: deploy-docs.yml  os-build.yml  release.yml
app/: Main.hs  hatena-b.spin
docs/: 404.html  doc.html  emacs.md  i18n.js  index.html  reference.md  spike-llvm-investigation.md  style.css
docs/assets/: index-BMd08avY.js  index-BOQNw4sg.js  index-BSpS4nHS.js  index-BWIafQXe.js  index-BhKAuL7L.js  index-BjK-O2Pj.js  index-Bp94ruSM.js  index-ByE7ydwu.js  index-C1-KE7i1.js  index-C1rEqB4q.js  index-C4O0fgRb.js  index-C5ASBw8Q.js  index-CB10sbq9.js  index-CKHyHik_.js  index-CLXxNtoh.js  index-CSFW6LZU.js  index-CWJFlKEm.css  index-CdVycQ6d.js  index-CiMQi-XJ.js  index-Cl50iaPK.js  index-CnuW3VH3.js  index-CyGfVz4d.css  index-D1JNUfSv.css  index-D1jcBV3t.js  index-D6dHfQfn.js  index-DBMt_49d.css  index-DT_G5XSB.js  index-DaRRqDcF.css  index-DaeHYoGX.js  index-Dl2XagBi.css  index-Dsuvx7zb.js  index-DyfVqGNT.js  index-KGhnMtuZ.js  index-NLeIra4l.js  index-Qmt5lY7d.js  index-bJua9-6Y.js  index-cROBgcFp.js  index-eesyxQqv.css  index-fHFgDzP4.css  index-h04WHNYb.css
docs/docs/: ai_workflow.md  api-index.md  build.md  cookbook.md  installation.md  introduction.md  sample.md  syntax.md
docs/ref/: add.md  append-file.md  begin.md  car.md  cdr.md  cons.md  data.md  def.md  define.md  empty-p.md  eq-op.md  eq.md  equal.md  file-exists-p.md  fn.md  gt.md  if.md  let.md  list-to-string.md  list.md  lt.md  mac.md  match.md  mod.md  mul.md  new-mvar.md  null-p.md  print.md  progn.md  put-mvar.md  quote.md  read-file.md  setq.md  sleep.md  spawn.md  string-append.md  string-eq.md  string-length.md  string-to-list.md  sub.md  (+3 more)
editors/emacs/: spinor-mode.el
examples/: hello.spin
labo/: research-haskell-unikernel-history.md  research-spinor-os-approach3-rd.md
labo/a1_ai_native/: research-spinor-os-approach3-rd.md
manual/: index.html  package-lock.json  package.json  vite.config.ts
manual/src/: App.css  App.tsx  main.tsx
os/: Kraftfile  Makefile.uk
runtime/: repl.c  repl.h  spinor.c  spinor.h
scripts/: build-wasm-repl.sh  build-wasm.sh
specs/: 01_parser.md  02_evaluator_and_env.md  03_lambda_and_closure.md  04_primitives_and_recursion.md  05_twister.md  06_macros.md  19_modules.md  20_concurrency.md  21_cl_alignment_basics.md  22_control_flow.md  23_list_operators.md  24_cl_alignment_extras.md  24b_package_system_spec.md  24c_condition_system_spec.md  25_transpiler.md  26_build.md  27_optimization.md  28_wasm.md  29_socket.md  30_swank.md  31_sly_eval.md  32_browser_repl.md  33_docs.md  33b_doc_viewer.md  33c_doc_ui.md  33d_logo.md  34_ci_release.md  35_stdlib.md  37_lsp_foundation.md  38_lsp_advanced.md  39_docgen.md  40_manual_setup.md  41_content_integration.md  42_github_actions.md  43_clhs_docs.md  43_clhs_documentation_spec.md  43b_build_guide_spec.md  43c_doc_restructuring_spec.md  43d_cookbook_spec.md  43e_architecture_spec.md  (+22 more)
src/Spinor/: BorrowCheck.hs  DocGen.hs  EscapeAnalysis.hs  Eval.hs  Expander.hs  GL.hs  GPGPU.hs  Infer.hs  Loader.hs  (+7 more)
tasks/: 01_parse.md  02_eval.md  03_lambda.md  04_primitives.md  05_twister.md  06_stdlib_expansion.md  07_macros.md  08_varargs_cond.md  09_expansion_phase.md  10_type_system_base.md  11_inference.md  12_toplevel_polymorphism.md  13_let_polymorphism.md  14_final_polish.md  15_emacs_integration.md  16_unit_testing.md  17_data_types.md  18_pattern_matching.md  19_modules.md  20_concurrency.md  21_cl_alignment_basics.md  22_control_flow.md  23_list_operators.md  24_cl_alignment_extras.md  24b_package_system_task.md  24c_condition_system_task.md  25_transpiler.md  26_build.md  27_optimization.md  28_wasm.md  29_socket.md  30_swank.md  31_sly_eval.md  32_browser_repl.md  33_docs.md  33b_doc_viewer.md  33c_doc_ui.md  33d_logo.md  34_ci_release.md  35_stdlib.md  (+37 more)
test-modules/: lib.spin  main.spin
twister/: boot.spin  core.spin  http-server.spin  http.spin  list.spin  math.spin  test-stdlib.spin  test.spin
web/: index.html  repl.js  spinor-repl.js  spinor-repl.wasm
(+259 files in other folders)
