cabal-version: 2.4
name:          spinor
version:       0.1.0.0
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:
    Spinor.Syntax
    Spinor.Val
    Spinor.Eval
    Spinor.Primitive
  build-depends:
    base       >= 4.14 && < 5,
    containers >= 0.6  && < 1,
    megaparsec >= 9.0  && < 10,
    mtl        >= 2.2  && < 3,
    text       >= 1.2  && < 3
  default-language: Haskell2010
  ghc-options:      -Wall

executable spinor
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base      >= 4.14 && < 5,
    text      >= 1.2  && < 3,
    directory >= 1.3  && < 2,
    spinor
  default-language: Haskell2010
  ghc-options:      -Wall
