cabal-version: 2.4
name:          spinor
version:       0.1.0.0
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:
    Spinor.Syntax
    Spinor.Val
    Spinor.Eval
    Spinor.Expander
    Spinor.Primitive
    Spinor.Type
    Spinor.Infer
    Spinor.BorrowCheck
    Spinor.EscapeAnalysis
    Spinor.Loader
    Spinor.Compiler.Codegen
    Spinor.Server
    Spinor.DocGen
    Spinor.Lsp.Docs
    Spinor.Lsp.Server
    Spinor.GPGPU
    Spinor.OpenCL.Raw
    Spinor.GL
    Spinor.Library.Json
    Spinor.Template
  build-depends:
    base       >= 4.14 && < 5,
    containers >= 0.6  && < 1,
    megaparsec >= 9.0  && < 10,
    mtl        >= 2.2  && < 3,
    text       >= 1.2  && < 3,
    bytestring >= 0.10 && < 1,
    filepath   >= 1.4  && < 2,
    directory  >= 1.3  && < 2,
    network    >= 3.1  && < 4,
    lsp        >= 2.4  && < 3,
    lens       >= 5.0  && < 6,
    co-log-core >= 0.3 && < 1,
    stm        >= 2.5  && < 3,
    vector     >= 0.12 && < 1,
    hmatrix    >= 0.20 && < 1,
    GLFW-b     >= 3.3  && < 4,
    OpenGL     >= 3.0  && < 4,
    aeson      >= 2.0  && < 3,
    scientific >= 0.3  && < 1
  extra-libraries:  OpenCL
  default-language: Haskell2010
  ghc-options:      -Wall

executable spinor
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base       >= 4.14 && < 5,
    text       >= 1.2  && < 3,
    bytestring >= 0.10 && < 1,
    directory  >= 1.3  && < 2,
    filepath   >= 1.4  && < 2,
    process    >= 1.6  && < 2,
    spinor
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite spinor-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Spinor.ParserSpec
    Spinor.EvalSpec
    Spinor.ServerSpec
    Spinor.JsonSpec
    Spinor.BorrowCheckSpec
    Spinor.RegionSpec
  build-depends:
    base           >= 4.14 && < 5,
    hspec          >= 2.7  && < 3,
    hspec-discover >= 2.7  && < 3,
    text           >= 1.2  && < 3,
    containers     >= 0.6  && < 1,
    spinor
  default-language: Haskell2010
  ghc-options:      -Wall
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.7 && < 3
